--- a/app/src/main/res/layout/dynamic_comment_item.xml
+++ b/app/src/main/res/layout/dynamic_comment_item.xml
@@ -18,7 +18,8 @@
             <com.gjf.lovezzu.view.CircleImageView
                 android:layout_width="45dp"
                 android:layout_height="33dp"
-                android:src="@drawable/def_avatar" />
+                android:src="@drawable/def_avatar"
+                android:id="@+id/dynamiccomment_userImg"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -31,13 +32,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="昵称"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:id="@+id/dynamiccomment_username"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="2017-8-21 16:45"
-                    android:textSize="11dp"/>
+                    android:textSize="11dp"
+                    android:id="@+id/dynamiccomment_date"/>
             </LinearLayout>
 
         </LinearLayout>
@@ -50,6 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="评论内容"
+                android:id="@+id/dynamiccomment_content"
                 />
         </LinearLayout>
     </LinearLayout>
