--- a/app/src/main/res/layout/inchool_school_view.xml
+++ b/app/src/main/res/layout/inchool_school_view.xml
@@ -7,8 +7,8 @@
 
 <com.bigkoo.convenientbanner.ConvenientBanner
     android:id="@+id/school_flush"
-    android:layout_margin="5dp"
     app:canLoop="true"
+    android:layout_marginBottom="5dp"
     android:layout_width="match_parent"
     android:layout_height="200dp"/>
 
